WIP fix bugs in filter, jump code

--- a/web_app/static/unhcr.css
+++ b/web_app/static/unhcr.css
@@ -244,7 +244,7 @@ tr.disabled-row {
 #floating-save-form {
     position: fixed;
     display: none;
-    top: 50%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: none; /* controlled by JS */
@@ -252,7 +252,7 @@ tr.disabled-row {
     z-index: 9999;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: #495057;
     padding: 12px 24px;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.2);
